# teamspeak-updater

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  extractor.rs  local.rs  main.rs  remote.rs  target.rs
